cm4all-workshop (2.0.16) unstable; urgency=low

  * workshop: create a per-plan cgroup only if cgroups are available

 --   

cm4all-workshop (2.0.15) unstable; urgency=low

  * spawn: fix user namespace bug
  * spawn: fix seccomp filters on old kernels
  * spawn: fix journal for jailed processes
  * spawn: allow only local, IPv4 and IPv6 sockets
  * spawn: rename the PID namespace init process to "init"

 -- Max Kellermann <mk@cm4all.com>  Fri, 30 Jun 2017 07:07:46 -0000

cm4all-workshop (2.0.14) unstable; urgency=low

  * spawn: mount a new /proc for the PID namespace
  * spawn: implement an init process for PID namespaces
  * spawn: allow using user namespaces
  * spawn: switch to a new systemd scope, enabling cgroup management
  * workshop: fix plan uid/gid verification
  * workshop: create a per-plan cgroup for job processes

 -- Max Kellermann <mk@cm4all.com>  Thu, 29 Jun 2017 13:26:30 -0000

cm4all-workshop (2.0.13) unstable; urgency=low

  * workshop: show plan name and job id in log messages
  * workshop: add option sends structured log messages to systemd journal
  * workshop: add database column "log" (requires manual migration)
  * workshop: add plan settings "rlimits", "sched_idle", "ioprio_idle", "idle"
  * workshop: kill process after timeout expires
  * spawn: fix file descriptor leaks
  * spawn: unblock signals

 -- Max Kellermann <mk@cm4all.com>  Fri, 23 Jun 2017 17:52:34 -0000

cm4all-workshop (2.0.12) unstable; urgency=low

  * cron: add setting "tag" which translates to LISTENER_TAG

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Jun 2017 07:15:49 -0000

cm4all-workshop (2.0.11) unstable; urgency=low

  * cron: pass partition name in CRON packet, not in LISTENER_TAG

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Jun 2017 11:16:58 -0000

cm4all-workshop (2.0.10) unstable; urgency=low

  * cron: pass LISTENER_TAG to translation server

 -- Max Kellermann <mk@cm4all.com>  Fri, 09 Jun 2017 13:01:54 -0000

cm4all-workshop (2.0.9) unstable; urgency=low
