@@ -1,6 +1,7 @@
 cm4all-workshop (2.0.16) unstable; urgency=low
 
   * workshop: create a per-plan cgroup only if cgroups are available
+  * improved log message after job start error
 
  --   
 
